fe/src/css/main.scss
/* ... */
.svg-content-responsive {
    display: inline-block;
    top: 0;
    left: 0;
}

.svg-primary-fill {
    fill: var(--primary);
    stroke: var(--primary);
    stroke-width: 1%;
}


.svg-comment-stroke {
    stroke: var(--comment);
}

.svg-good-stroke {
    stroke: var(--good);
}

.svg-danger-stroke {
    stroke: var(--danger);
}

.order-assay-chart-container {
    width: 100%;
}

.assay-widget-container {
    display: flex;
    justify-content: start;
    width: 100%;
    .value-container {
        display: flex;
        min-width: 2em;
        width: 15%;
        overflow: auto;
        color: var(--primary);
        margin-right:.8em;
        align-items: center;
        justify-content: right;
    }
    .svg-container {
        width: 100%;
        display: flex;
        align-items: center;
    }
}

    table tbody tr:hover {
        background-color: var(--washed-accent);
    }
    table tbody tr.p-datatable-row-expansion {
        &:hover {
            background-color: var(--background);
        }
    }
.bold {
    font-weight: bold;
}
.clickable-row-cursor {
        table tbody tr {
            cursor: pointer;
        }
        table tbody tr.p-datatable-row-expansion {
            cursor: auto;
        }
}


.non-clickable-row-cursor {
    table tr {
        cursor:auto;
    }
    table tr:hover {
        cursor: auto;
    }
}

.row-header {
    font-weight: bold;
    color: var(--comment);
}


.status-badge {
    border-radius: 2px;
    padding: .25em .5rem;
    text-transform: uppercase;
    font-weight: bold;
    font-size: .8em;
    // letter-spacing: .3px;
}

.scenario-status-SUCCESS {
    background-color: var(--washed-good);
    color: var(--good);
}


.scenario-status-NEW {
    background-color: var(--washed-accent);
    color: var(--accent);
}

.assay-status-OFF-SPEC {
    background-color: var(--washed-danger);
    color: var(--danger);
}


.assay-status-ON-SPEC {
    background-color: var(--washed-good);
    color: var(--good);
}

.sidebar {
    z-index:900;
    position: fixed;
    height: 100vh;
    color: var(--on-primary);
    background-color: var(--primary);
    width: var(--navbar-width);
    gap: 3em;
    a {
        &:link {
            text-decoration: none
        };
    }
    .logo-title-container {
        padding: 1em;
        display: flex;
        gap: 1em;
        align-items: center;
        justify-content: center;
        .title {
            color: var(--on-secondary);
            font-family: var(--header-family);
            font-size: 1.2em;
        }

        .blending-logo {
            color: var(--on-secondary);
            display: flex;
            width: 1.2em;
        }
    }

    .navbar {
        margin-top: 4em;
    }

    .navbar-nav {
        list-style: none;
        padding:0;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .nav-item {
        width: 100%;
        a:hover {
            color: var(--accent);
        }
    }

    .nav-link {
        display: flex;
        align-items: center;
        height: 3rem;
        &:hover {
            background-color: var(--washed-accent)
        }
    }

    .link-text {
        color: var(--on-primary);
    }

    .icon {
        color: var(--on-primary);
    }


    @media (max-width: $small) {
        width: var(--navbar-small-width);
        .title {
            display: none;
        }
        .link-text {
            display: none;
        }
        .nav-link {
            justify-content: center;
        }
    }
}

.form-container {
    display: flex;
    flex-direction: column;
    gap:1em;
}

.form-field-container {
    display: flex;
    flex-direction: column;
    label {
        padding: .1em;
        color: var(--comment);
    }
    input {
        border: solid 1px var(--comment);
        font-size: 1em;
        border-radius: 10px;
        padding: .2em .8em;
    }
}

.form-field-validation-error {
    color: var(--danger);
    // background-color: blue;
    font-size: .8em;
    margin: 0;
}


.modal-background {
    background-color: rgba(0, 0, 0, 70%);
    height: 100vh;
    z-index: 500;
    display: flex;
    justify-content: center;
    align-items: center;

    position: fixed;
    top:0;
    left:var(--navbar-width);
    width: calc(100vw - var(--navbar-width));
    @media (max-width: $small) {
        width: calc(100vw - var(--navbar-small-width));
        left: var(--navbar-small-width);
    }
    
}

.modal-container {
    background-color: var(--card);
    border-radius: var(--border-radius);
    box-shadow: var(--shadow);
    // padding: 2em;
}

.modal-header {
    border-bottom: 2px solid var(--comment);
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.5em;
    padding: .3em 1em;
    .modal-title {
        // padding: 1em;
        display: inline-block
    }
}

.modal-content {
    padding:2em;
}

.form-section {
    padding-top: 1em;
    .title{
        font-size: 1.2em;
        padding: 0.5em;
        font-weight: bold;
        color: var(--comment)
    }
}

.assay-input-container {
    display: flex;
    gap: 1em;
    .form-field-container {
        display: inline-block;
        input {
            width: 100%;
        }
    }
}

.order-form-container {
    width: 30vw;
}

.objective-function-form-container {
    padding: 2em 5em;
    width: 37em;
    margin-bottom: 1em;
}

.right {
    display: flex;
    justify-content: right;
}

.center {
    display: flex;
    justify-content: center;
}

